--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -1,9 +1,9 @@
 /**
- * Theme Name: Escapade
- * Theme URI: https://wordpress.org/themes/escapade/
+ * Theme Name: Mins
+ * Theme URI: https://wordpress.org/themes/mins/
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
- * Description: Escapade is a travel-oriented child theme for the Primer theme.
+ * Description: Mins is a minimalistic child theme for the Primer theme.
  * Version: 1.0.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
