--- a/.dev/sass/partials/_social.scss
+++ b/.dev/sass/partials/_social.scss
@@ -13,8 +13,6 @@
 		height: 32px;
 		transition: 200ms opacity;
 		color: $body-bg;
-		background: $primary-color;
-		border-radius: $global-radius;
 
 		&:before{
 			-webkit-font-smoothing: subpixel-antialiased;
@@ -24,7 +22,7 @@
 		}
 
 		&:hover{
-			background: $primary-color;
+			opacity: 0.7;
 		}
 	}
 
