--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -26,7 +26,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $color-background-button: map-get($foundation-palette, primary);
 $body-font-color: $black;
-$sans-font-family: 'Open Sans', sans-serif;
+$sans-font-family: 'Roboto', sans-serif;
 $global-weight-normal: normal;
 $global-radius: 0;
 
