--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -1,7 +1,7 @@
-$site-footer-background: #111 !default;
-$site-footer-text-color: contrast-color($site-footer-background, #222, #fff, 50%) !default;
+$site-footer-background: #fff !default;
+$site-footer-text-color: #181818 !default;
 $site-footer-border-color: contrast-color($site-footer-background, darken($site-footer-background,15%), lighten($site-footer-background,15%), 50%) !default;
-$site-footer-anchor-color: contrast-color($site-footer-background, #222, #fff, 50%) !default;
+$site-footer-anchor-color: #181818 !default;
 $site-footer-anchor-color-hover: contrast-color($site-footer-background, #222, #fff, 50%) !default;
 
 $site-footer-info-background: #f4f4f4;
@@ -10,8 +10,8 @@ $site-footer-info-anchor-color: contrast-color($site-footer-info-background, #22
 $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-background, #222, #fff, 50%) !default;
 
 .site-footer{
-	background-color: $site-footer-background;
 	color: $site-footer-text-color;
+	background-color: $site-footer-background;
 	padding: 0;
 
 	a{
@@ -63,7 +63,6 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		padding: 0;
 
 		.widget{
-			background-color: lighten($site-footer-background,10%);
 			color: $site-footer-text-color;
 		}
 
@@ -90,8 +89,18 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 			color: $site-footer-anchor-color;
 			background: transparent;
 			font-weight: bold;
-			border-bottom: 2px solid $site-footer-border-color;
-			border-radius: 0;
+			font-size: 30px;
+			font-weight: 300;
+			margin-bottom: 30px;
+			&:after {
+				content: " ";
+				height: 2px;
+				background: #181818;
+				width: 15%;
+				position: absolute;
+				bottom: -10px;
+				left: 0;
+			}
 		}
 
 		.widget {
@@ -124,14 +133,13 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	}
 
 	.site-info-text{
-		float: left;
-		width: 50%;
-		margin-top: 5px;
 		color: rgba(0,0,0,.5);
+		text-align: center;
 		a[rel="designer"] {
 			color: rgba(0,0,0,.5);
 		}
 		.menu {
+			display: none;
 			padding: 0;
 			margin: 0 0 10px 0;
 			list-style: none;
@@ -143,6 +151,14 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 					font-weight: 700;
 					font-size: emCalc(14);
 				}
+			}
+		}
+		@media screen and (min-width: 769px) {
+			text-align: left;
+			float: left;
+			width: 50%;
+			.menu {
+				display: block;
 			}
 		}
 	}
