--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -15,22 +15,34 @@ a.button:visited,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	background: $color-background-button;
 	border: none;
-	color: contrast-color($color-background-button,#fff,#000,25%);
+	color: #181818;
+	text-transform: uppercase;
+	font-weight: 700;
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
 	-webkit-appearance: none; /* Corrects inability to style clickable 'input' types in iOS */
 	-webkit-font-smoothing: auto;
 	font-size: rem-calc(16);
 	line-height: 1;
-	border-radius: 3px;
-	padding: .75em 1em;
-	padding: .75rem 1rem;
+	
+	padding: .75em 0;
+	padding: .75rem 0;
 	display: inline-block;
 
-	&:hover {
-		color: contrast-color($color-background-button,#fff,#000,25%);
-		background: lighten($color-background-button,3%);
+	&:after {
+		content: '\f501';
+		font-family: 'Genericons';
+		display: inline;
+		top: 0px;
+		font-size: 12px;
+		left: 5px;
+		position: relative;
+		transition: .2s all;
+	}
+	
+	&:hover:after {
+		left: 8px;
+		transition: .2s all;
 	}
 
 	&:focus
@@ -90,7 +102,6 @@ textarea {
 
 	&:focus {
 		outline: none;
-		background-color: darken($input-background,5%);
 	}
 }
 
