--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -22,7 +22,7 @@ $foundation-palette: (
   alert: #ec5840,
 );
 $medium-gray: #cacaca;
-$black: #0a0a0a;
+$black: #181818;
 $white: #fefefe;
 $color-background-button: map-get($foundation-palette, primary);
 $body-font-color: $black;
@@ -56,7 +56,7 @@ $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: map-get($foundation-palette, primary);
+$anchor-color: #62b6cb;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
 $anchor-color-visited: scale-color($anchor-color, $lightness: -14%);
 $anchor-text-decoration: none;
@@ -72,7 +72,7 @@ $blockquote-border: 1px solid $medium-gray;
 // ---------
 
 $input-color: $black;
-$input-background: $white;
+$input-background: #eaeaea;
 
 // 5. Widgets
 // -----------
