--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -24,7 +24,7 @@ input[type="submit"] {
 	-webkit-font-smoothing: auto;
 	font-size: rem-calc(16);
 	line-height: 1;
-	
+	background: transparent;
 	padding: .75em 0;
 	padding: .75rem 0;
 	display: inline-block;
@@ -38,6 +38,10 @@ input[type="submit"] {
 		left: 5px;
 		position: relative;
 		transition: .2s all;
+	}
+	
+	&:hover {
+		background: transparent !important;
 	}
 	
 	&:hover:after {
