--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -1,6 +1,6 @@
 $site-footer-background: #fff !default;
 $site-footer-text-color: #181818 !default;
-$site-footer-border-color: contrast-color($site-footer-background, darken($site-footer-background,15%), lighten($site-footer-background,15%), 50%) !default;
+$site-footer-border-color: #181818 !default;
 $site-footer-anchor-color: #181818 !default;
 $site-footer-anchor-color-hover: contrast-color($site-footer-background, #222, #fff, 50%) !default;
 
