--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -49,8 +49,10 @@
 		@extend .large-push-6;
 	}
 
-	body.page-template-page-builder &{
+	body.page-template-page-builder &,
+	body.page-template-page-builder-no-header &{
 		width: 100%;
+		max-width: 100%;
 		padding: 0;
 		float: none;
 	}
