Fix content width

--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -8,9 +8,11 @@
 		padding: 0;
 	}
 
-	body.page-template-page-builder &{
+	body.page-template-page-builder &,
+	body.page-template-page-builder-no-header &{
+		width: 100%;
+		max-width: 100%;
 		padding: 0;
-		max-width: none;
 	}
 }
 
