--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -7,7 +7,7 @@
  * Version: 1.0.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
- * Text Domain: primer
+ * Text Domain: mins
  * Domain Path: /languages
  * Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, fixed-layout, flexible-header, left-sidebar, light, one-column, responsive-layout, right-sidebar, rtl-language-support, sticky-post, threaded-comments, three-columns, translation-ready, two-columns
  * Template: primer
